# weather-dashboard

./: .gitignore  README.md  angular.json  package-lock.json  package.json
backend_service/: .env.example  Cargo.toml  main.rs
backend_service/data/: worldcities.csv
src/: server.ts
src/app/: app.config.ts  app.html  app.scss  app.spec.ts  app.ts  weather.models.ts
src/app/components/favorites-drawer/: favorites-drawer.html  favorites-drawer.scss  favorites-drawer.spec.ts  favorites-drawer.ts
src/app/components/settings-drawer/: settings-drawer.html  settings-drawer.scss  settings-drawer.spec.ts  settings-drawer.ts
src/app/models/: search.models.ts  weather.models.ts
src/app/pipes/: daily-forecast.pipe.ts  localization.pipe.spec.ts  localization.pipe.ts  pressure.pipe.ts  temperature.pipe.ts  wind.pipe.ts
src/app/services/: favorites.service.ts  localization.service.ts  search.service.ts  settings.ts  weather.ts
src/app/utils/: background.utils.ts  chart.utils.ts  formatters.utils.ts  mock.data.ts
src/assets/i18n/: en.json  ru.json
src/environments/: environment.ts  environment.ts.example
