[package]
name = "backend_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
dotenv = "0.15.0"
reqwest = "0.12.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
csv = "1.3"

[[bin]]
name = "backend_service"
path = "main.rs"
